# iwScan-NDK

./: README.md  build.gradle  consumer-rules.pro  jitpack.yml  settings.gradle
.github/workflows/: ci.yml  publish.yml
src/main/cpp/: CMakeLists.txt  iwscan.c
src/main/java/sangiorgi/wps/scan/: ScanOutputParser.kt  ScannedNetwork.kt  WifiScanner.kt
src/test/java/sangiorgi/wps/scan/: ScanOutputParserTest.kt
